# limef-plugins

./: .gitignore  README.md
basler/: CMakeLists.txt  README.md  gobuild.bash  staging.bash
basler/apps/cpp/: CMakeLists.txt  basler_pipeline.cpp  run_cmake.bash
basler/ext/: .gitignore
basler/python/: limef_basler.cpp
basler/src/: basler_camera_thread.h  plugin.cpp
opencv/: CMakeLists.txt  gobuild.bash  staging.bash
opencv/apps/cpp/: CMakeLists.txt  run_cmake.bash  usb_gpu_pipeline.cpp
opencv/apps/python/: usb_gpu_pipeline.py
opencv/python/: limef_opencv.cpp
opencv/src/: gpu_opencv_thread.h  plugin.cpp  tensorframe_opencv.h
